@@ -107,6 +107,7 @@ package lu.fisch.structorizer.generators;
  *                                          bugfix #1210: any workaround for value return from functions and on
  *                                          CALLs disabled in case suppressTransformation;
  *                                          bugfix #1222.1: Wrong indentation of non-default CASE branches.
+ *      Kay Gürtzig         2025-09-07      Issue #1223: First approach to implement generateCode(Try, String)
  *
  ******************************************************************************************************
  *
@@ -206,6 +207,7 @@ import lu.fisch.structorizer.elements.Parallel;
 import lu.fisch.structorizer.elements.Repeat;
 import lu.fisch.structorizer.elements.Root;
 import lu.fisch.structorizer.elements.Subqueue;
+import lu.fisch.structorizer.elements.Try;
 import lu.fisch.structorizer.elements.TypeMapEntry;
 import lu.fisch.structorizer.elements.While;
 import lu.fisch.structorizer.executor.Executor;
@@ -292,17 +294,12 @@ public class BASHGenerator extends Generator {
 	// END KGU#371 2019-03-07
 
 	// START KGU#686 2019-03-18: Enh. #56
-	/**
-	 * Subclassable method to specify the degree of availability of a try-catch-finally
-	 * construction in the target language.
-	 * @return either {@link TryCatchSupportLevel#TC_NO_TRY} or {@link TryCatchSupportLevel#TC_TRY_CATCH},
-	 * or {@link TryCatchSupportLevel#TC_TRY_CATCH_FINALLY}
-	 */
+	@Override
 	protected TryCatchSupportLevel getTryCatchLevel()
 	{
 		/* The only theoretical approach coming near an exception handling
 		 * would require to entangle the tried commands with && but this
-		 * doesn't work recursively. */
+		 * doesn't work recursively. FIXME */
 		return TryCatchSupportLevel.TC_NO_TRY;
 	}
 	// END KGU#686 2019-03-18
@@ -539,7 +536,7 @@ public class BASHGenerator extends Generator {
 		return super.checkElementInformation(_ele);
 	}
 	// END KGU#150/KGU#241 2016-09-01
-
+	
 	/* (non-Javadoc)
 	 * @see lu.fisch.structorizer.generators.Generator#transformTokens(lu.fisch.utils.StringList)
 	 */
@@ -1204,12 +1201,21 @@ public class BASHGenerator extends Generator {
 		if (_subqueue.isNoOp()) {
 			addCode(":", _indent, _subqueue.isDisabled(false));
 		}
+		// START KGU#1206 2025-09-07: Issue #1223 Ugly workaround
+		else if (!getLineEnd(_subqueue).isEmpty()) {
+			// If the isequence forms a conjunction we must add true to complete the syntax
+			addCode("true", _indent, _subqueue.isDisabled(false));
+		}
+		// END KGU#1206-09-07
 	}
 
 	@Override
 	protected void generateCode(Instruction _inst, String _indent) {
 		
 		if (!appendAsComment(_inst, _indent)) {
+			// START KGU#1206 2025-09-07: Issue #1223 Try mechanism
+			String lineEnd = this.getLineEnd(_inst);
+			// END KGU#1206 2025-09-07
 			// START KGU 2014-11-16
 			appendComment(_inst, _indent);
 			boolean disabled = _inst.isDisabled(false);
@@ -1239,13 +1245,19 @@ public class BASHGenerator extends Generator {
 							if (Function.testIdentifier(target.substring(cutPos), false, null)
 									&& !this.wasDefHandled(root, target, !disabled)
 									&& root.isSubroutine()) {
-								addCode(getLocalDeclarator(false, typeMap.get(target)) + target, _indent, disabled);
+								// START KGU#1206 2025-09-07: Issue #1223
+								//addCode(getLocalDeclarator(false, typeMap.get(target)) + target, _indent, disabled);
+								addCode(getLocalDeclarator(false, typeMap.get(target)) + target + lineEnd, _indent, disabled);
+								// END KGU#1206 2025-09-07
 							}
 						}
 						if (inputItems.count() > 2) {
 							String prompt = inputItems.get(0);
 							if (!prompt.isEmpty()) {
-								addCode(transform(CodeParser.getKeyword("output") + " " + prompt), _indent, disabled);
+								// START KGU#1206 2025-09-07: Issue #1223
+								//addCode(transform(CodeParser.getKeyword("output") + " " + prompt), _indent, disabled);
+								addCode(transform(CodeParser.getKeyword("output") + " " + prompt) + lineEnd, _indent, disabled);
+								// END KGU#1206 2025-09-07
 							}
 							for (int j = 1; j < inputItems.count(); j++) {
 								String item = transform(inputItems.get(j) + " <-");
@@ -1255,7 +1267,10 @@ public class BASHGenerator extends Generator {
 								}
 								inputItems.set(j, item);
 							}
-							addCode(this.getInputReplacer(false).replace("$1", inputItems.concatenate(" ", 1)), _indent, disabled);
+							// START KGU#1206 2025-09-07: Issue #1223
+							//addCode(this.getInputReplacer(false).replace("$1", inputItems.concatenate(" ", 1)), _indent, disabled);
+							addCode(this.getInputReplacer(false).replace("$1", inputItems.concatenate(" ", 1)) + lineEnd, _indent, disabled);
+							// END KGU#1206 2025-09-07
 							continue;
 						}
 					}
@@ -1278,7 +1293,18 @@ public class BASHGenerator extends Generator {
 							continue;
 						}
 						// END KGU#1205 2025-09-05
-						generateResultVariables(expr, _indent, disabled);
+						// START KGU#1206 2025-09-07: Issue #1223 Ugly workaround
+						//generateResultVariables(expr, _indent, disabled);
+						String indent1 = _indent;
+						if (!lineEnd.isBlank()) {
+							addCode("{", _indent, disabled);
+							indent1 = _indent+this.getIndent();
+						}
+						generateResultVariables(expr, indent1, disabled);
+						if (!lineEnd.isBlank()) {
+							addCode("true }", _indent, disabled);
+						}
+						// END KGU#1206 2025-09-07
 						// In case of an endstanding return we don't need a formal return command
 						if (i < nLines-1 || root.children.getElement(root.children.getSize()-1) != _inst) {
 							addCode("return 0", _indent, disabled);
@@ -1290,7 +1316,10 @@ public class BASHGenerator extends Generator {
 					// START KGU#1190 2025-08-17: Bugfix #1207: We must handle output explicitly
 					if (unifyKeywords(Element.splitLexically(line, true)).indexOf(preOutput) == 0) {
 						String transf = this.transformOutput(line);
-						addCode(transf, _indent, disabled);
+						// START KGU#1206 2025-09-07: Issue #1223
+						//addCode(transf, _indent, disabled);
+						addCode(transf + lineEnd, _indent, disabled);
+						// END KGU#1206 2025-09-07
 						continue;
 					}
 					// END KGU#1190 2025-08-17
@@ -1298,6 +1327,11 @@ public class BASHGenerator extends Generator {
 				}
 				// END KGU#1193 2025-08-20
 				String codeLine = transform(line);
+				// START KGU#1206 2025-09-07: Issue #1223
+				if (!codeLine.isBlank()) {
+					codeLine += lineEnd;
+				}
+				// END KGU#1206 2025-09-07
 				/* FIXME KGU#803 2020-02-16: Issue #816 - we should mark local variables as local
 				 * This requires to check whether line is an assignment, that the target variable
 				 * is not a parameter or input variable (how to declare these?) and it hasn't been
@@ -1389,9 +1423,7 @@ public class BASHGenerator extends Generator {
 	protected void generateCode(Alternative _alt, String _indent) {
 		
 		boolean disabled = _alt.isDisabled(false);
-		if (code.count() > 0 && !code.get(code.count()-1).trim().isEmpty()) {
-			addCode("", "", disabled);
-		}
+		this.addSepaLine();
 		// START KGU 2014-11-16
 		appendComment(_alt, _indent);
 		// END KGU 2014-11-16
@@ -1474,7 +1506,10 @@ public class BASHGenerator extends Generator {
 		// START KGU#277 2016-10-13: Enh. #270
 		//code.add(_indent+"fi");
 		//addSepaLine();
-		addCode("fi", _indent, disabled);
+		// START KGU#1206 2025-09-07: Issue #1223 Try mechanism
+		//addCode("fi", _indent, disabled);
+		addCode("fi" + this.getLineEnd(_alt), _indent, disabled);
+		// END KGU#1206 2025-09-07
 		addCode("", "", disabled);
 		// END KGU#277 2016-10-13
 
@@ -1488,9 +1523,7 @@ public class BASHGenerator extends Generator {
 	protected void generateCode(Case _case, String _indent) {
 		
 		boolean disabled = _case.isDisabled(false);
-		if (code.count() > 0 && !code.get(code.count()-1).trim().isEmpty()) {
-			addCode("", "", disabled);
-		}
+		addSepaLine();
 		// START KGU 2014-11-16
 		appendComment(_case, _indent);
 		// END KGU 2014-11-16
@@ -1535,7 +1568,10 @@ public class BASHGenerator extends Generator {
 			generateCode((Subqueue) _case.qs.get(_case.qs.size()-1),_indent+this.getIndent()+this.getIndent());
 			addCode(";;", _indent+this.getIndent(), disabled);
 		}
-		addCode("esac", _indent, disabled);
+		// START KGU#1206 2025-09-07: Issue #1223 Try mechanism
+		//addCode("esac", _indent, disabled);
+		addCode("esac" + this.getLineEnd(_case), _indent, disabled);
+		// END KGU#1206 2025-09-07
 		addCode("", "", disabled);
 	}
 	
@@ -1650,7 +1686,10 @@ public class BASHGenerator extends Generator {
 		//code.add("");
 		addCode("do", _indent, disabled);
 		generateCode(_for.getBody(),_indent+this.getIndent());
-		addCode("done", _indent, disabled);	
+		// START KGU#1206 2025-09-07: Issue #1223 Try mechanism
+		//addCode("done", _indent, disabled);
+		addCode("done" + this.getLineEnd(_for), _indent, disabled);
+		// END KGU#1206 2025-09-07
 		addCode("", "", disabled);
 		// END KGU#277 2016-10-14
 
@@ -1699,7 +1738,10 @@ public class BASHGenerator extends Generator {
 		//code.add("");
 		addCode("do", _indent, disabled);
 		generateCode(_while.getBody(),_indent+this.getIndent());
-		addCode("done", _indent, disabled);
+		// START KGU#1206 2025-09-07: Issue #1223 Try mechanism
+		//addCode("done", _indent, disabled);
+		addCode("done" + this.getLineEnd(_while), _indent, disabled);
+		// END KGU#1206 2025-09-07
 		addCode("", "", disabled);
 		// END KGU#277 2016-10-14
 		
@@ -1746,7 +1788,10 @@ public class BASHGenerator extends Generator {
 		// START KGU#811 2020-02-21: Bugfix #824
 		addCode(this.finishCondition(condition) + " || break", _indent + getIndent(), disabled);
 		// END KGU#811 2020-02-21
-		addCode("done", _indent, disabled);
+		// START KGU#1206 2025-09-07: Issue #1223 Try mechanism
+		//addCode("done", _indent, disabled);
+		addCode("done" + this.getLineEnd(_repeat), _indent, disabled);
+		// END KGU#1206 2025-09-07
 		addCode("", "", disabled);
 		
 	}
@@ -1773,7 +1818,10 @@ public class BASHGenerator extends Generator {
 		addCode("while :", _indent, disabled);
 		addCode("do", _indent, disabled);
 		generateCode(_forever.getBody(), _indent + this.getIndent());
-		addCode("done", _indent, disabled);
+		// START KGU#1206 2025-09-07: Issue #1223 Try mechanism
+		//addCode("done", _indent, disabled);
+		addCode("done" + this.getLineEnd(_forever), _indent, disabled);
+		// END KGU#1206 2025-09-07
 		addCode("", "", disabled);
 		// END KGU#277 2016-10-14
 		
@@ -1785,6 +1833,9 @@ public class BASHGenerator extends Generator {
 			// START KGU 2014-11-16
 			appendComment(_call, _indent);
 			// END KGU 2014-11-16
+			// START KGU#1206 2025-09-07: Issue #1223 Try mechanism
+			String lineEnd = this.getLineEnd(_call);
+			// END KGU#1206 2025-09-07
 			// START KGU#277 2016-10-14: Enh. #270
 			boolean disabled = _call.isDisabled(false);
 			// END KGU#277 2016-10-14
@@ -1794,7 +1845,10 @@ public class BASHGenerator extends Generator {
 				String line = callText.get(i);
 				// START KGU#277 2016-10-14: Enh. #270
 				//code.add(_indent+transform(_call.getText().get(i)));
-				addCode(transform(line), _indent, disabled);
+				// START KGU#1206 2025-09-07: Issue #1223 Try mechanism
+				//addCode(transform(line), _indent, disabled);
+				addCode(transform(line) + lineEnd, _indent, disabled);
+				// END KGU#1206 2025-09-07
 				// END KGU#277 2016-10-14
 				// START KGU#1205 2025-09-06: Bugfix #1210 Avoid all workarounds on suppressTransformation
 				if (suppressTransformation) {
@@ -1835,24 +1889,39 @@ public class BASHGenerator extends Generator {
 									}
 								}
 								if (isArray) {
-									addCode(makeArrayCopyAssignment(target, resultName, false, root.constants.containsKey(target), false), _indent, disabled);
+									// START KGU#1206 2025-09-07: Issue #1223 Try mechanism
+									//addCode(makeArrayCopyAssignment(target, resultName, false, root.constants.containsKey(target), false), _indent, disabled);
+									addCode(makeArrayCopyAssignment(target, resultName, false, root.constants.containsKey(target), false) + lineEnd,
+											_indent, disabled);
+									// END KGU#1206 2025-09-07
 									wasDefHandled(root, target, true); 	// Set the handled flag
 									done = true;
 								}
 								else if (isRecord) {
 									if (!wasDefHandled(root, target, true)) {
 										// We must ignore if target is a constant, otherwise we couldn't fill it
-										addCode(this.getAssocDeclarator(false) + target, _indent, disabled);
+										// START KGU#1206 2025-09-07: Issue #1223 Try mechanism
+										//addCode(this.getAssocDeclarator(false) + target, _indent, disabled);
+										addCode(this.getAssocDeclarator(false) + target + lineEnd,
+												_indent, disabled);
+										// END KGU#1206 2025-09-07
 									}
 									addCode("for index" + routineId + " in \"${" + source + "keys[@]}\"; do", _indent, disabled);
 									addCode(target + "[${" + resultName + "keys[$index" + routineId + "]}]=${" + resultName + "values[$index" + routineId + "]}", _indent+this.getIndent(), disabled);
-									addCode("done", _indent, disabled);
+									// START KGU#1206 2025-09-07: Issue #1223 Try mechanism
+									//addCode("done", _indent, disabled);
+									addCode("done" + lineEnd, _indent, disabled);
+									// END KGU#1206 2025-09-07
 									done = true;
 								}
 							}
 							if (!done) {
-								addCode(transform(tokens.concatenate(null, 0, tokens.indexOf("<-")+1) + source),
+								// START KGU#1206 2025-09-07: Issue #1223 Try mechanism
+								//addCode(transform(tokens.concatenate(null, 0, tokens.indexOf("<-")+1) + source),
+								//		_indent, disabled);
+								addCode(transform(tokens.concatenate(null, 0, tokens.indexOf("<-")+1) + source) + lineEnd,
 										_indent, disabled);
+								// END KGU#1206 2025-09-07
 							}
 						}
 					}
@@ -1921,11 +1990,20 @@ public class BASHGenerator extends Generator {
 		appendComment("==========================================================", _indent);
 		appendComment("================= START PARALLEL SECTION =================", _indent);
 		appendComment("==========================================================", _indent);
-		String indent1 = _indent + this.getIndent();
+		// START KGU#1206 2025-09-07: Issue #1223  Approach to translate TRY elements
+		String lineEnd = this.getLineEnd(_para);
+		String indent0 = _indent;
+		if (!lineEnd.isBlank()) {
+			// This is a nested Try!
+			addCode("{", _indent, disabled);
+			indent0 += this.getIndent();
+		}
+		// END KGU#1206 2025-09-07
+		String indent1 = indent0 + this.getIndent();
 		String varName = "pids" + Integer.toHexString(_para.hashCode());
 		// START KGU#277 2016-10-14: Enh. #270
 		//code.add(_indent + varName + "=\"\"");
-		addCode(varName + "=\"\"", _indent , disabled);
+		addCode(varName + "=\"\"", indent0 , disabled);
 		// END KGU#277 2016-10-14
 		for (Subqueue q : _para.qs)
 		{
@@ -1934,34 +2012,113 @@ public class BASHGenerator extends Generator {
 			//generateCode(q, indent1);
 			//code.add(_indent + ") &");
 			//code.add(_indent + varName + "=\"${" + varName + "} $!\"");
-			addCode("(", _indent, disabled);
+			addCode("(", indent0, disabled);
 			generateCode(q, indent1);
-			addCode(") &", _indent, disabled);
-			addCode(varName + "=\"${" + varName + "} $!\"", _indent, disabled);
+			addCode(") &", indent0, disabled);
+			addCode(varName + "=\"${" + varName + "} $!\"", indent0, disabled);
 			// END KGU#277 2016-10-14
 		}
 		// START KGU#277 2016-10-14: Enh. #270
-		addCode("wait ${" + varName + "}", _indent, disabled);
+		addCode("wait ${" + varName + "}", indent0, disabled);
 		// END KGU#277 2016-10-14
+		// START KGU#1206 2025-09-07: Issue #1223 Approach to translate TRY elements
+		if (!lineEnd.isBlank()) {
+			addCode("}" + lineEnd, _indent, disabled);			
+		}
+		// END KGU#1206 2025-09-07
 		appendComment("==========================================================", _indent);
 		appendComment("================== END PARALLEL SECTION ==================", _indent);
 		appendComment("==========================================================", _indent);
 	}
 	// END KGU#174 2016-04-05
 	
-//	public void generateCode(Try _try, String _indent)
-//	{
-//		// TODO
-//		// That is what we might achieve (possibly with () instead of {})
-//		{ # try
-//
-//		    command1 &&
-//		    #save your output
-//
-//		} || { # catch
-//		    # save log for exception 
+	// START KGU#1206 2025-09-07: Issue #1223 Approach to translate TRY elements
+	@Override
+	public void generateCode(Try _try, String _indent)
+	{
+		// That is what we want to achieve:
+		//trap finallyCode EXIT
+		//{ # try
+		//
+		//    command_1 &&
+		//    command_2 &&
+		//    ...
+		//    command_n &&
+		//    # save your output &&
+		//    true
+		//} || { # catch
+		//    # save log for exception
+		//    command_x1
+		//    ...
+		//    command_xm
+		//}
+		//trap - EXIT
+		//
+		// where finallyCode is a function that contains qFinally code
+		boolean disabled = _try.isDisabled(false);
+//		if (!_try.qFinally.isNoOp()) {
+//			String finallyName = "finally" + Integer.toHexString(_try.hashCode());
+//			// FIXME: Now we have to insert qFinally as function at this.subroutineInsertionLine
+//			//this.insertCode(???, this.subroutineInsertionLine);
+//			addCode("trap " + finallyName + " EXIT", _indent, disabled);
+//		}		
+		String exceptName = _try.getUnbrokenText().getLongString().trim();
+		String lineEnd = this.getLineEnd(_try);
+		String indent0 = _indent;
+		if (!lineEnd.isBlank()) {
+			// This is a nested Try!
+			addCode("{", _indent, disabled);
+			indent0 += this.getIndent();
+		}
+		String indent1 = indent0 + this.getIndent();
+		addCode("{ " + this.commentSymbolLeft() + " try", indent0, disabled);
+		generateCode(_try.qTry, indent1);
+		addCode("} || { " + this.commentSymbolLeft() +
+				" catch " + exceptName,
+				indent0, disabled);
+		if (!suppressTransformation) {
+			// Assign the exit code of the last failed try command
+			addCode(transform(exceptName) + "=$?", indent1, disabled);
+		}
+		generateCode(_try.qCatch, indent1);
+		// START KGU#1206 FIXME: Temporary code
+		if (!_try.qFinally.isNoOp()) {
+			addCode("} { " + this.commentSymbolLeft() + " finally", indent0, disabled);
+			generateCode(_try.qFinally, indent1);
+		}
+		// END KGU#1206
+		addCode("}", indent0, disabled);
+//		if (!_try.qFinally.isNoOp()) {
+//			addCode("trap - EXIT", _indent, disabled);
 //		}
-//	}
+		if (!lineEnd.isBlank()) {
+			addCode("}" + lineEnd, _indent, disabled);			
+		}
+	}
+
+	/**
+	 * Finds out whether the given _element is part of a try block and if so
+	 * returns an AND operator (between commands) as line end. Otherwise
+	 * returns an empty string.
+	 * 
+	 * @param _ele - an arbitrary element that might be part of the substructure
+	 *     of a try block.
+	 * @return either " &&" or "".
+	 */
+	protected String getLineEnd(Element _ele)
+	{
+		String lineEnd = "";
+		Element parent = _ele.parent;
+		while (parent != null && !(parent instanceof Try)) {
+			_ele = parent;
+			parent = _ele.parent;
+		}
+		if (parent instanceof Try && _ele == ((Try)parent).qTry) {
+			lineEnd = " &&";
+		}
+		return lineEnd;
+	}
+	// END KGU#1206 2025-09-07
 
 	// TODO: Decompose this - Result mechanism is missing!
 	@Override
